--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,14 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,478</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,846</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">MainScript_calculator.Calculator</td><td><a href="#m0">Add</a></td><td rowspan="1">1638980824557</td><td rowspan="1">985</td></tr><tr class="passedeven"><td><a href="#m1">Div</a></td><td rowspan="1">1638980823815</td><td rowspan="1">741</td></tr><tr class="passedeven"><td><a href="#m2">Mul</a></td><td rowspan="1">1638980823114</td><td rowspan="1">699</td></tr><tr class="passedeven"><td><a href="#m3">Sub</a></td><td rowspan="1">1638980825544</td><td rowspan="1">1069</td></tr><tr class="passedeven"><td><a href="#m4">browse</a></td><td rowspan="1">1638980819430</td><td rowspan="1">3680</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Runner_main.MainScript</td><td><a href="#m0">browse</a></td><td rowspan="1">1648618267749</td><td rowspan="1">2856</td></tr><tr class="passedeven"><td><a href="#m1">login_fun</a></td><td rowspan="1">1648618270609</td><td rowspan="1">4793</td></tr><tr class="passedeven"><td><a href="#m2">search_fun</a></td><td rowspan="1">1648618275403</td><td rowspan="1">10297</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">MainScript_calculator.Calculator#Add</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">MainScript_calculator.Calculator#Div</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">MainScript_calculator.Calculator#Mul</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">MainScript_calculator.Calculator#Sub</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">MainScript_calculator.Calculator#browse</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">Runner_main.MainScript#browse</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Runner_main.MainScript#login_fun</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Runner_main.MainScript#search_fun</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
