--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>Calculator.Mul()[pri:2, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.Sub()[pri:5, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.Add()[pri:4, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.Div()[pri:3, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.browse()[pri:1, instance:MainScript_calculator.Calculator@33aeca0b]<br/></td></tr>
-<tr><td>smoke</td><td>Calculator.Mul()[pri:2, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.Sub()[pri:5, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.Add()[pri:4, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.Div()[pri:3, instance:MainScript_calculator.Calculator@33aeca0b]<br/>Calculator.browse()[pri:1, instance:MainScript_calculator.Calculator@33aeca0b]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>regression</td><td>MainScript.browse()[pri:1, instance:Runner_main.MainScript@b40bb6e]<br/></td></tr>
+<tr><td>smoke</td><td>MainScript.browse()[pri:1, instance:Runner_main.MainScript@b40bb6e]<br/></td></tr>
 </table>
