--- a/test-output/ExtentReportsTestNG.html
+++ b/test-output/ExtentReportsTestNG.html
@@ -54,7 +54,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2021-12-08 18:57:40</span>
+					<span class='suite-started-time'>2022-03-29 20:07:33</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -84,25 +84,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 0s+748ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 0s+638ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 0s+748ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 0s+638ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2021-12-08 18:57:39</span> 
+							<span class='panel-lead suite-started-time'>2022-03-29 20:07:32</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2021-12-08 18:57:40</span> 
+							<span class='panel-lead suite-ended-time'>2022-03-29 20:07:33</span> 
 						</div> 
 					</div>
 				</div>
@@ -275,24 +275,20 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='407bb58b-0385-4a31-9ded-3883713d6bfb'>
+										<li class='collection-item test displayed active pass ' extentid='3b27f778-9f5c-468f-864d-c431f5b82f09'>
 											<div class='test-head'>
-												<span class='test-name'>Mul </span>
+												<span class='test-name'>login_fun </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  regression smoke'></span>
+												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-08 18:57:39</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-03-29 20:07:32</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-03-29 20:07:32</span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+2ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
-														<div class='categories'>
-																<span class='category text-white'>regression</span>
-																<span class='category text-white'>smoke</span>
-														</div>
 												</div>
 												<div class='test-steps'>
 													<table class='bordered table-results'>
@@ -306,7 +302,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:57:39</td>
+																	<td class='timestamp'>20:07:32</td>
 																	<td class='step-details'>Test passed</td>
 																</tr>
 														</tbody>
@@ -316,7 +312,7 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='bbc2a9c7-f9fe-4348-ae3d-c08ed541e064'>
+										<li class='collection-item test displayed active pass ' extentid='1da8c9ce-f0c1-4ee8-b6da-ce9f48ab9438'>
 											<div class='test-head'>
 												<span class='test-name'>browse </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
@@ -324,9 +320,9 @@
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-03-29 20:07:32</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-03-29 20:07:32</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+1ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -347,7 +343,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:57:39</td>
+																	<td class='timestamp'>20:07:32</td>
 																	<td class='step-details'>Test passed</td>
 																</tr>
 														</tbody>
@@ -357,24 +353,20 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='6b379fa9-1443-4f74-8ca1-9fd5dbfda1c3'>
+										<li class='collection-item test displayed active pass ' extentid='e3b61876-46bd-45d5-b679-2d04fd15f146'>
 											<div class='test-head'>
-												<span class='test-name'>Sub </span>
+												<span class='test-name'>search_fun </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  regression smoke'></span>
+												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-08 18:57:39</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2022-03-29 20:07:32</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2022-03-29 20:07:32</span>
 													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
-														<div class='categories'>
-																<span class='category text-white'>regression</span>
-																<span class='category text-white'>smoke</span>
-														</div>
 												</div>
 												<div class='test-steps'>
 													<table class='bordered table-results'>
@@ -388,89 +380,7 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:57:39</td>
-																	<td class='step-details'>Test passed</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='dea39e64-2415-4880-815b-dc8c0fd05d56'>
-											<div class='test-head'>
-												<span class='test-name'>Div </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  regression smoke'></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-														<div class='categories'>
-																<span class='category text-white'>regression</span>
-																<span class='category text-white'>smoke</span>
-														</div>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:57:39</td>
-																	<td class='step-details'>Test passed</td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='79d22e82-3f90-4a31-b519-eb792f9675b3'>
-											<div class='test-head'>
-												<span class='test-name'>Add </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide  regression smoke'></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2021-12-08 18:57:39</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+0ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-														<div class='categories'>
-																<span class='category text-white'>regression</span>
-																<span class='category text-white'>smoke</span>
-														</div>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>18:57:39</td>
+																	<td class='timestamp'>20:07:32</td>
 																	<td class='step-details'>Test passed</td>
 																</tr>
 														</tbody>
@@ -532,12 +442,12 @@
 													<span class='category-name'>regression</span>
 												</div>
 												<div class='category-status-counts'>
-														<span class='pass label dot'>Pass: 5</span>
+														<span class='pass label dot'>Pass: 1</span>
 												</div>
 												<div class='cat-body'>
 													<div class='category-status-counts'>
 														<div class='button-group'>
-															<a href='#!' class='pass label filter'>Pass <span class='icon'>5</span></a>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>1</span></a>
 															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
 															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
 														</div>
@@ -553,28 +463,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='407bb58b-0385-4a31-9ded-3883713d6bfb'>Mul</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='bbc2a9c7-f9fe-4348-ae3d-c08ed541e064'>browse</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='6b379fa9-1443-4f74-8ca1-9fd5dbfda1c3'>Sub</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='dea39e64-2415-4880-815b-dc8c0fd05d56'>Div</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='79d22e82-3f90-4a31-b519-eb792f9675b3'>Add</span></td>
+																		<td>2022-03-29 20:07:32</td>
+																		<td><span class='category-link linked' extentid='1da8c9ce-f0c1-4ee8-b6da-ce9f48ab9438'>browse</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
@@ -587,12 +477,12 @@
 													<span class='category-name'>smoke</span>
 												</div>
 												<div class='category-status-counts'>
-														<span class='pass label dot'>Pass: 5</span>
+														<span class='pass label dot'>Pass: 1</span>
 												</div>
 												<div class='cat-body'>
 													<div class='category-status-counts'>
 														<div class='button-group'>
-															<a href='#!' class='pass label filter'>Pass <span class='icon'>5</span></a>
+															<a href='#!' class='pass label filter'>Pass <span class='icon'>1</span></a>
 															<a href='#!' class='fail label filter'>Fail <span class='icon'>0</span></a>
 															<a href='#!' class='other label filter'>Others <span class='icon'>0</span></a>
 														</div>
@@ -608,28 +498,8 @@
 															</thead>
 															<tbody>
 																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='407bb58b-0385-4a31-9ded-3883713d6bfb'>Mul</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='bbc2a9c7-f9fe-4348-ae3d-c08ed541e064'>browse</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='6b379fa9-1443-4f74-8ca1-9fd5dbfda1c3'>Sub</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='dea39e64-2415-4880-815b-dc8c0fd05d56'>Div</span></td>
-																		<td><div class='status label capitalize pass'>pass</div></td>
-																	</tr>
-																	<tr class='pass'>
-																		<td>2021-12-08 18:57:39</td>
-																		<td><span class='category-link linked' extentid='79d22e82-3f90-4a31-b519-eb792f9675b3'>Add</span></td>
+																		<td>2022-03-29 20:07:32</td>
+																		<td><span class='category-link linked' extentid='1da8c9ce-f0c1-4ee8-b6da-ce9f48ab9438'>browse</span></td>
 																		<td><div class='status label capitalize pass'>pass</div></td>
 																	</tr>
 															<tbody>
