--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\pratik\AppData\Local\Temp\testng-eclipse-1498459010\testng-customsuite.xml</span>
+                    <span>C:\Users\pratik\AppData\Local\Temp\testng-eclipse--1494179878\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,27 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MainScript_calculator.Calculator" class="method navigator-link" hash-for-method="Add">Add</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Runner_main.MainScript" class="method navigator-link" hash-for-method="browse">browse</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MainScript_calculator.Calculator" class="method navigator-link" hash-for-method="Div">Div</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Runner_main.MainScript" class="method navigator-link" hash-for-method="login_fun">login_fun</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MainScript_calculator.Calculator" class="method navigator-link" hash-for-method="Mul">Mul</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MainScript_calculator.Calculator" class="method navigator-link" hash-for-method="Sub">Sub</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="MainScript_calculator.Calculator" class="method navigator-link" hash-for-method="browse">browse</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Runner_main.MainScript" class="method navigator-link" hash-for-method="search_fun">search_fun</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -142,37 +132,9 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">MainScript_calculator.Calculator</span>
+              <span class="class-name">Runner_main.MainScript</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="Add">
-                  </a> <!-- Add -->
-                  <span class="method-name">Add</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Div">
-                  </a> <!-- Div -->
-                  <span class="method-name">Div</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Mul">
-                  </a> <!-- Mul -->
-                  <span class="method-name">Mul</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="Sub">
-                  </a> <!-- Sub -->
-                  <span class="method-name">Sub</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="browse">
@@ -180,12 +142,26 @@
                   <span class="method-name">browse</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="login_fun">
+                  </a> <!-- login_fun -->
+                  <span class="method-name">login_fun</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="search_fun">
+                  </a> <!-- search_fun -->
+                  <span class="method-name">search_fun</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\pratik\AppData\Local\Temp\testng-eclipse-1498459010\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\pratik\AppData\Local\Temp\testng-eclipse--1494179878\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -194,7 +170,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;MainScript_calculator.Calculator&quot;/&gt;
+      &lt;class name=&quot;Runner_main.MainScript&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -222,22 +198,6 @@
               <span class="test-group-name">regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">Add</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">Div</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">Mul</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">Sub</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
                 <span class="method-in-group-name">browse</span>
                 <br/>
               </div> <!-- method-in-group -->
@@ -245,22 +205,6 @@
             <div class="test-group">
               <span class="test-group-name">smoke</span>
               <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">Add</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">Div</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">Mul</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">Sub</span>
-                <br/>
-              </div> <!-- method-in-group -->
               <div class="method-in-group">
                 <span class="method-in-group-name">browse</span>
                 <br/>
@@ -282,32 +226,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'browse')
-data.setCell(0, 2, 'MainScript_calculator.Calculator')
-data.setCell(0, 3, 3680);
+data.setCell(0, 1, 'search_fun')
+data.setCell(0, 2, 'Runner_main.MainScript')
+data.setCell(0, 3, 10297);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Sub')
-data.setCell(1, 2, 'MainScript_calculator.Calculator')
-data.setCell(1, 3, 1069);
+data.setCell(1, 1, 'login_fun')
+data.setCell(1, 2, 'Runner_main.MainScript')
+data.setCell(1, 3, 4793);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'Add')
-data.setCell(2, 2, 'MainScript_calculator.Calculator')
-data.setCell(2, 3, 985);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'Div')
-data.setCell(3, 2, 'MainScript_calculator.Calculator')
-data.setCell(3, 3, 741);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'Mul')
-data.setCell(4, 2, 'MainScript_calculator.Calculator')
-data.setCell(4, 3, 699);
+data.setCell(2, 1, 'browse')
+data.setCell(2, 2, 'Runner_main.MainScript')
+data.setCell(2, 3, 2856);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -333,34 +269,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">MainScript_calculator.Calculator</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Runner_main.MainScript</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">initialize</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">browse</span>
-                <span class="method-start">1922 ms</span>
+                <span class="method-start">2451 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Mul</span>
-                <span class="method-start">5606 ms</span>
+                <span class="method-name">login_fun</span>
+                <span class="method-start">5311 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Div</span>
-                <span class="method-start">6307 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Add</span>
-                <span class="method-start">7049 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">Sub</span>
-                <span class="method-start">8036 ms</span>
+                <span class="method-name">search_fun</span>
+                <span class="method-start">10105 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">quit</span>
-                <span class="method-start">9107 ms</span>
+                <span class="method-start">20405 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
