--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="69b785">  <td>21/12/08 21:57:06</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Calculator.quit()[pri:0, instance:MainScript_calculator.Calculator@71687585]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@929697158</td>   <td></td> </tr>
-<tr bgcolor="69b785">  <td>21/12/08 21:56:57</td>   <td>-9093</td> <td>&nbsp;</td><td title="&gt;&gt;Calculator.initialize()[pri:0, instance:MainScript_calculator.Calculator@71687585]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@929697158</td>   <td></td> </tr>
-<tr bgcolor="69b785">  <td>21/12/08 21:56:59</td>   <td>-7185</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.browse()[pri:1, instance:MainScript_calculator.Calculator@71687585]">browse</td> 
-  <td>main@929697158</td>   <td></td> </tr>
-<tr bgcolor="69b785">  <td>21/12/08 21:57:03</td>   <td>-3501</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Mul()[pri:2, instance:MainScript_calculator.Calculator@71687585]">Mul</td> 
-  <td>main@929697158</td>   <td></td> </tr>
-<tr bgcolor="69b785">  <td>21/12/08 21:57:03</td>   <td>-2800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Div()[pri:3, instance:MainScript_calculator.Calculator@71687585]">Div</td> 
-  <td>main@929697158</td>   <td></td> </tr>
-<tr bgcolor="69b785">  <td>21/12/08 21:57:04</td>   <td>-2058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Add()[pri:4, instance:MainScript_calculator.Calculator@71687585]">Add</td> 
-  <td>main@929697158</td>   <td></td> </tr>
-<tr bgcolor="69b785">  <td>21/12/08 21:57:05</td>   <td>-1071</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Sub()[pri:5, instance:MainScript_calculator.Calculator@71687585]">Sub</td> 
-  <td>main@929697158</td>   <td></td> </tr>
+<tr bgcolor="d87d80">  <td>22/03/30 11:01:25</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;MainScript.quit()[pri:0, instance:Runner_main.MainScript@5049d8b2]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@479734028</td>   <td></td> </tr>
+<tr bgcolor="d87d80">  <td>22/03/30 11:01:10</td>   <td>-15094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainScript.login_fun()[pri:2, instance:Runner_main.MainScript@5049d8b2]">login_fun</td> 
+  <td>main@479734028</td>   <td></td> </tr>
+<tr bgcolor="d87d80">  <td>22/03/30 11:01:15</td>   <td>-10300</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainScript.search_fun()[pri:3, instance:Runner_main.MainScript@5049d8b2]">search_fun</td> 
+  <td>main@479734028</td>   <td></td> </tr>
+<tr bgcolor="d87d80">  <td>22/03/30 11:01:05</td>   <td>-20395</td> <td>&nbsp;</td><td title="&gt;&gt;MainScript.initialize()[pri:0, instance:Runner_main.MainScript@5049d8b2]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@479734028</td>   <td></td> </tr>
+<tr bgcolor="d87d80">  <td>22/03/30 11:01:07</td>   <td>-17954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainScript.browse()[pri:1, instance:Runner_main.MainScript@5049d8b2]">browse</td> 
+  <td>main@479734028</td>   <td></td> </tr>
 </table>
