--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,31 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>MainScript_calculator.Calculator</td>
+<td>Runner_main.MainScript</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Add</td>
-<td>regression smoke </td>
-</tr>
+<td>login_fun</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Div</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Sub</td>
-<td>regression smoke </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Mul</td>
-<td>regression smoke </td>
-</tr>
+<td>search_fun</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>browse</td>
