--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8485b5">  <td>21/12/08 18:57:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Mul()[pri:2, instance:MainScript_calculator.Calculator@33aeca0b]">Mul</td> 
-  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="8485b5">  <td>21/12/08 18:57:32</td>   <td>-3828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.browse()[pri:1, instance:MainScript_calculator.Calculator@33aeca0b]">browse</td> 
-  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="8485b5">  <td>21/12/08 18:57:38</td>   <td>2417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Sub()[pri:5, instance:MainScript_calculator.Calculator@33aeca0b]">Sub</td> 
-  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="8485b5">  <td>21/12/08 18:57:36</td>   <td>781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Div()[pri:3, instance:MainScript_calculator.Calculator@33aeca0b]">Div</td> 
-  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="8485b5">  <td>21/12/08 18:57:37</td>   <td>1495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Calculator.Add()[pri:4, instance:MainScript_calculator.Calculator@33aeca0b]">Add</td> 
-  <td>main@1453606810</td>   <td></td> </tr>
-<tr bgcolor="8485b5">  <td>21/12/08 18:57:30</td>   <td>-5693</td> <td>&nbsp;</td><td title="&gt;&gt;Calculator.initialize()[pri:0, instance:MainScript_calculator.Calculator@33aeca0b]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1453606810</td>   <td></td> </tr>
+<tr bgcolor="8485b5">  <td>22/03/29 20:07:07</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;MainScript.initialize()[pri:0, instance:Runner_main.MainScript@b40bb6e]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@756080817</td>   <td></td> </tr>
+<tr bgcolor="8485b5">  <td>22/03/29 20:07:12</td>   <td>4675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainScript.login_fun()[pri:2, instance:Runner_main.MainScript@b40bb6e]">login_fun</td> 
+  <td>main@756080817</td>   <td></td> </tr>
+<tr bgcolor="8485b5">  <td>22/03/29 20:07:09</td>   <td>1696</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainScript.browse()[pri:1, instance:Runner_main.MainScript@b40bb6e]">browse</td> 
+  <td>main@756080817</td>   <td></td> </tr>
+<tr bgcolor="8485b5">  <td>22/03/29 20:07:16</td>   <td>9569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainScript.search_fun()[pri:3, instance:Runner_main.MainScript@b40bb6e]">search_fun</td> 
+  <td>main@756080817</td>   <td></td> </tr>
 </table>
